version/0.17/_sources/api/solver/_autosummary/settings/fieldview_unstruct_mesh.rst.txt
:orphan:

.. _fieldview_unstruct_mesh:

fieldview_unstruct_mesh
=======================

.. autoclass:: ansys.fluent.core.solver.settings_232.fieldview_unstruct_mesh.fieldview_unstruct_mesh
    :show-inheritance:

.. rubric:: Arguments

==========================================   =================================

Argument                                                               Summary

==========================================   =================================
:ref:`name <name>`                                               'name' child.

:ref:`surfaces <surfaces_1>`                       List of surfaces to export.

:ref:`cellzones <cellzones_1>`                   List of cell zones to export.

:ref:`cell_func_domain <cell_func_domain>`           'cell_func_domain' child.

==========================================   =================================

.. rubric:: Included in:

======================   ==========================

Parent                                      Summary

======================   ==========================
:ref:`export <export>`       Enter the export menu.

======================   ==========================

