version/0.25/_sources/api/solver/_autosummary/settings/fieldview_unstruct_mesh.rst.txt
:orphan:

.. _fieldview_unstruct_mesh:

fieldview_unstruct_mesh
=======================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.fieldview_unstruct_mesh.fieldview_unstruct_mesh
    :show-inheritance:

.. rubric:: Arguments

==========================================   ============================================

Argument                                                                          Summary

==========================================   ============================================
:ref:`file_name <file_name_1>`                     Enter the desired file name to export.

:ref:`surfaces <surfaces_1>`                                  List of surfaces to export.

:ref:`cellzones <cellzones>`                                List of cell zones to export.

:ref:`cell_func_domain <cell_func_domain>`       Select the list of quantities to export.

==========================================   ============================================

.. rubric:: Included in:

======================   ===============================

Parent                                           Summary

======================   ===============================
:ref:`export <export>`       Allows you to export files.

======================   ===============================

